@@ -71,6 +71,14 @@ if WIN32_THREADS
 libgc_la_SOURCES += win32_threads.c
 endif
 
+if USE_INTERNAL_LIBATOMIC_OPS 	 
+nodist_libgc_la_SOURCES = ./atomic_ops.c 	 
+endif 	 
+  	 
+if NEED_ATOMIC_OPS_ASM 	 
+nodist_libgc_la_SOURCES = ./atomic_ops_sysdeps.S 	 
+endif
+
 # Include THREADDLLIBS here to ensure that the correct versions of
 # linuxthread semaphore functions get linked:
 libgc_la_LIBADD = @addobjs@ $(THREADDLLIBS) $(UNWINDLIBS)
@@ -90,7 +98,7 @@ if CPLUSPLUS
 lib_LTLIBRARIES += libgccpp.la
 pkginclude_HEADERS += include/gc_cpp.h include/gc_allocator.h
 libgccpp_la_SOURCES = gc_cpp.cc
-libgccpp_la_LIBADD = $(top_builddir)/libgc.la
+libgccpp_la_LIBADD = ./libgc.la
 libgccpp_la_LDFLAGS = -version-info 1:3:0 -no-undefined
 endif
 
