@@ -1,4 +1,10 @@
 2008-01-10  Hans Boehm <Hans.Boehm@hp.com>
+	
+	* Makefile.am: Mention atomic_ops.c and atomic_ops_sysdeps.S
+	again.  Refer to build directory as ".".
+	* Makefile.in: Regenerate.
+	
+2008-01-10  Hans Boehm <Hans.Boehm@hp.com>
 
 	* configure.ac: Ignore --enable-parallel-mark on Darwin for now.
 	* configure: Regenerate.
